# JuNOCpp

./: .gitignore  Apple.hpp  ApplePI.hpp  Archer.hpp  ArcherPI.hpp  CMakeLists.txt  ExpPON.cpp  JuNOCpp.cmake.in  LICENSE  README.md
ArcherNOP/: Apple.hpp  ApplePI.hpp  Archer.hpp  ArcherPI.hpp  exp.cpp
AutoDoorNOP/: Door.hpp  NOPDoor.hpp  NOPPerson.hpp  NOPSensor.hpp  Person.hpp  Sensor.hpp  exp.cpp
ColisionNOP/include/: Bola.h  Desenhador.h  Main.h
ColisionNOP/src/: Bola.cpp  Desenhador.cpp  Main.cpp  main.cpp
JuNOCpp/: .config.hpp  Action.cpp  Action.hpp  Condition.cpp  Condition.hpp  CustomString.cpp  CustomString.hpp  Definitions.hpp  FBE.hpp  Instigation.cpp  Instigation.hpp  JuNOC++.hpp  List.hpp  Method.cpp  Method.hpp  Premise.cpp  Premise.hpp  Rule.cpp  Rule.hpp  SubCondition.cpp  SubCondition.hpp  Table.hpp  hashTest.cpp
JuNOCpp/Attributes/: Attribute.cpp  Attribute.hpp  Boolean.cpp  Boolean.hpp  Char.cpp  Char.hpp  Double.cpp  Double.hpp  Integer.cpp  Integer.hpp  String.cpp  String.hpp
JuNOCpp/Better/: Attribute.hpp  BasePremise.hpp  BetterAction.cpp  BetterAction.hpp  BetterAttribute.hpp  BetterCondition.cpp  BetterCondition.hpp  BetterInstigation.cpp  BetterInstigation.hpp  BetterMethod.cpp  BetterMethod.hpp  BetterPremise.cpp  BetterPremise.hpp  BetterRule.cpp  BetterRule.hpp  Impertinent.hpp  NOPManager.cpp  NOPManager.hpp  Notifiable.hpp  Notifier.cpp  Notifier.hpp  Premise.hpp
JuNOCpp/Core/: Attribute.hpp  BetterAction.cpp  BetterAction.hpp  BetterAttribute(deprecated).hpp  BetterCondition.cpp  BetterCondition.hpp  BetterInstigation.cpp  BetterInstigation.hpp  BetterPremise(deprecated).hpp  BetterRule.cpp  BetterRule.hpp  Impertinent.hpp  NOPManager.cpp  NOPManager.hpp  Notifiable.hpp  Notifier.hpp  Premise.hpp
JuNOCpp/Utils/: CustomString.cpp  NOPLogger.cpp  NOPLogger.hpp  SmartPtr.hpp  forward_list.hpp  smart_ptr.hpp  tuple_helper.hpp
JuNOCpp/Utils/NOPTraits/: attribute_traits.hpp  common_traits.hpp  condition_traits.hpp  instigation_traits.hpp  premise_traits.hpp  rule_traits.hpp
JuNOCpp/includes/Core/: Action.hpp  Attribute.hpp  Impertinent.hpp  NOPManager.hpp  Notifier.hpp  Rule.hpp
JuNOCpp/includes/Utils/: CustomString.hpp  vector.hpp
JuNOCpp/includes/Utils/NOPTraits/: attribute_traits.hpp  common_traits.hpp  instigation_traits.hpp
JuNOCpp/sources/Core/: NOPManager.cpp
JuNOCpp/sources/Utils/: CustomString.cpp
NOPSensors/include/: Sensor.hpp
NOPSensors/src/: Sensor.cpp  main.cpp
NOPSensorsFW4/: SensorFW4.hpp  main.cpp
includes/: .config.hpp  JuNOC++.hpp
includes/Core/: Action.hpp  Attribute.hpp  Condition.hpp  Instigation.hpp  NOPManager.hpp  Notifiable.hpp  Notifier.hpp  Premise.hpp  Rule.hpp
includes/Utils/: NOPLogger.hpp  forward_list.hpp  tuple_helper.hpp
includes/Utils/NOPTraits/: action_traits.hpp  attribute_traits.hpp  common_traits.hpp  condition_traits.hpp  instigation_traits.hpp  premise_traits.hpp  rule_traits.hpp
sources/Core/: Action.cpp  Condition.cpp  Instigation.cpp  NOPManager.cpp  Notifier.cpp  Rule.cpp
sources/Utils/: CustomString.cpp  NOPLogger.cpp
tests/: CMakeLists.txt  catch.hpp  tests-main.cpp  tests.cpp
